--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
